combined models notebook changes from class
 Changes to be committed:
	modified:   combined_models.ipynb

--- a/combined_models.ipynb
+++ b/combined_models.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -12,14 +15,14 @@
     "\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "from sklearn.model_selection import train_test_split"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import autoencoder.aecExtraFeatures as Z_calculations\n",
@@ -36,14 +39,14 @@
     "    data_point = tf.concat([data_point, Z_features_tensor], 1)\n",
     "\n",
     "    return data_point"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def isAnomaly(data_point, model_1, model_2, threshold):\n",
@@ -59,14 +62,14 @@
     "\n",
     "    # if the autoencoder sees something weird, run it through the isolation forest to make sure\n",
     "    return model_2.predict(data_point)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from turtleIsolationForests.preprocessFeatures import preprocess_features\n",
@@ -75,75 +78,75 @@
     "test_dataframe = pd.read_csv(\"eda_simple_classification/network_data_mod_test.csv\", index_col=0)\n",
     "\n",
     "train_data, test_data, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#train_data, test_data, train_labels, test_labels = train_data[:1000], test_data[:1000], train_labels[:1000], test_labels[:1000]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(len(train_data))\n",
     "print(len(train_labels))\n",
     "print(len(test_data))\n",
     "print(len(test_labels))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "np_train_labels = train_labels.to_numpy()\n",
     "np_test_labels = test_labels.to_numpy()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "np_train_data = train_data.to_numpy()\n",
     "np_test_data = test_data.to_numpy()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "np_train_data = tf.cast(np_train_data, tf.float32)\n",
     "np_test_data = tf.cast(np_test_data, tf.float32)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "np_train_labels = np_train_labels.astype(bool)\n",
@@ -154,62 +157,62 @@
     "\n",
     "anomalous_train_data = np_train_data[~np_train_labels]\n",
     "anomalous_test_data = np_test_data[~np_test_labels]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from autoencoder.autoencoder import AnomalyDetector\n",
     "autoencoder = AnomalyDetector()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "autoencoder.compile(optimizer='adam', loss='mae')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "autoencoder.encoder.layers"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "history = autoencoder.fit(normal_train_data, normal_train_data,\n",
     "          epochs=200,\n",
     "          validation_data=(test_data, test_data),\n",
     "          shuffle=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "plt.plot(history.history[\"loss\"])\n",
@@ -220,28 +223,28 @@
     "#plt.ylim([0,.0008])\n",
     "plt.legend([\"Loss\", \"Validation Loss\"])\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "reconstructions = autoencoder.predict(normal_train_data)\n",
     "train_loss = tf.keras.losses.mae(reconstructions, normal_train_data)\n",
     "threshold = np.mean(train_loss) + 0 * np.std(train_loss)\n",
     "print(\"Threshold: \", threshold)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def predict(model, data, threshold):\n",
@@ -258,81 +261,81 @@
     "  print(\"Accuracy = {}\".format(accuracy_score(labels, predictions)))\n",
     "  print(\"Precision = {}\".format(precision_score(labels, predictions)))\n",
     "  print(\"Recall = {}\".format(recall_score(labels, predictions)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%timeit\n",
     "%%capture\n",
     "\n",
     "predict(autoencoder, np_test_data, threshold)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
     "\n",
     "test_predictions = predict(autoencoder, np_test_data, threshold)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Ones are anomalous predictions"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Ones are anomalous predictions"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(len(np.where(test_predictions.numpy()==1)[0]))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Zeros are normal predictions"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Zeros are normal predictions"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(len(np.where(test_predictions.numpy()==0)[0]))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -341,23 +344,23 @@
     "auc_df[\"scores\"] = getLoss(autoencoder, np_test_data)\n",
     "auc_df[\"predictions\"] = test_predictions\n",
     "auc_df['is_anomaly'] = np_test_labels"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Stats for whole dataset"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Stats for whole dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from turtleIsolationForests.printResults import print_results\n",
@@ -365,14 +368,14 @@
     "\n",
     "print_results(auc_df[\"predictions\"].to_numpy(), auc_df['is_anomaly'].to_numpy())\n",
     "print(\"auroc: \" + str(get_auroc_value(auc_df[\"scores\"], auc_df['is_anomaly'])))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def addZToData(data, model):\n",
@@ -382,94 +385,94 @@
     "\n",
     "    data_with_Z_rf = []\n",
     "    for i in range(len(data_with_Z)):\n",
-    "        data_with_Z_rf.append(np.append(np_train_data[:][:][i].numpy().reshape(1,46).squeeze(), data_with_Z[i]))\n",
+    "        data_with_Z_rf.append(np.append(data[:][:][i].numpy().reshape(1,46).squeeze(), data_with_Z[i]))\n",
     "\n",
     "    return pd.DataFrame(data_with_Z_rf)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "train_data_with_Z_df = addZToData(np_train_data, autoencoder)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "train_data_with_Z_df"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "np_test_labels = np.array(np_test_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "predicted_anomalous = np_test_data[test_predictions]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "predicted_anomalous_labels = np_test_labels[test_predictions]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "anomalous_test_data_with_Z_df = addZToData(predicted_anomalous, autoencoder)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "contamination = sum(train_labels == 0) / len(train_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def getFinalPredictions(first_predictions, second_predictions):\n",
@@ -484,14 +487,14 @@
     "    #print(\"Used indices\")\n",
     "    print_results(autoencoder_copy[\"predictions\"], autoencoder_copy[\"is_anomaly\"])\n",
     "    #print(\"auroc: \" + str(get_auroc_value(autoencoder_copy[\"scores\"], second_predictions)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from turtleIsolationForests.extendedIsolationForest import ExtendedIsolationForest\n",
@@ -499,27 +502,27 @@
     "\n",
     "eif = ExtendedIsolationForest(contamination = contamination, random_state = None)\n",
     "eif.fit(train_data_with_Z_df, train_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%timeit\n",
     "\n",
     "eif.predict(anomalous_test_data_with_Z_df, predicted_anomalous_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -531,52 +534,52 @@
     "eif_df['is_anomaly'] = predicted_anomalous_labels\n",
     "\n",
     "getFinalPredictions(auc_df, eif_df)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(\"EIF AUROC: \" + str(get_auroc_value(eif_df[\"scores\"], predicted_anomalous_labels)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from turtleIsolationForests.sciForest import SCIsolationForest\n",
     "\n",
     "scif = SCIsolationForest(contamination = contamination, num_hyperplanes_per_split=5, num_attributes_per_split=5, random_state = None)\n",
     "scif.fit(train_data_with_Z_df, train_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%timeit\n",
     "\n",
     "scif.predict(anomalous_test_data_with_Z_df, predicted_anomalous_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "scif_scores, scif_predictions = scif.predict(anomalous_test_data_with_Z_df, predicted_anomalous_labels)\n",
@@ -587,64 +590,64 @@
     "scif_df['is_anomaly'] = predicted_anomalous_labels\n",
     "\n",
     "getFinalPredictions(auc_df, scif_df)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(\"SCIF AUROC: \" + str(get_auroc_value(scif_df[\"scores\"], predicted_anomalous_labels)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from turtleIsolationForests.isolationForest import IsolationForest\n",
     "\n",
     "isoforest = IsolationForest(contamination = contamination, random_state = None)\n",
     "isoforest.fit(train_data_with_Z_df, train_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%timeit\n",
     "\n",
     "isoforest.predict(anomalous_test_data_with_Z_df,  predicted_anomalous_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "train_predictions = isoforest.train_scores\n",
     "print_results(isoforest, train_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "isoforest_scores, isoforest_predictions = isoforest.predict(anomalous_test_data_with_Z_df, predicted_anomalous_labels)\n",
@@ -655,52 +658,52 @@
     "isoforest_df['is_anomaly'] = predicted_anomalous_labels\n",
     "\n",
     "getFinalPredictions(auc_df, isoforest_df)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(\"IF AUROC: \" + str(get_auroc_value(isoforest_df[\"scores\"], predicted_anomalous_labels)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from turtleIsolationForests.FBIF import FBIsolationForest\n",
     "\n",
     "fbif = FBIsolationForest(contamination = contamination, random_state = None)\n",
     "fbif.fit(train_data_with_Z_df, train_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%%timeit\n",
     "\n",
     "fbif.predict(anomalous_test_data_with_Z_df, predicted_anomalous_labels)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "fbif_scores, fbif_predictions = fbif.predict(anomalous_test_data_with_Z_df, predicted_anomalous_labels)\n",
@@ -711,30 +714,27 @@
     "fbif_df['is_anomaly'] = predicted_anomalous_labels\n",
     "\n",
     "getFinalPredictions(auc_df, fbif_df)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(\"FBIF AUROC: \" + str(get_auroc_value(fbif_df[\"scores\"], predicted_anomalous_labels)))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
