Add corrective factor to ae contamination for pipeline predictions
Boost ae recall for better pipeline performance.

 Changes to be committed:
	modified:   Combined_Robust_Pipeline.ipynb
	modified:   autoencoder/autoencoder.py
	modified:   pipelineUtils/runPipeline.py
	modified:   robust_autoencoder_test_loss.ipynb

--- a/Combined_Robust_Pipeline.ipynb
+++ b/Combined_Robust_Pipeline.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "def timed_pipeline_predict(autoenc):\n",
     "    start_time = time()\n",
-    "    ae_scores, ae_predictions = autoenc.pipeline_predict(X_test, test_labels_np, contamination)\n",
+    "    ae_scores, ae_predictions = autoenc.pipeline_predict(X_test, contamination)\n",
     "    ae_time = time() - start_time\n",
     "    return ae_scores, ae_predictions, ae_time\n",
     "\n",
