latest robust pipeline nb
 Changes to be committed:
	modified:   Combined_Robust_Pipeline.ipynb

--- a/Combined_Robust_Pipeline.ipynb
+++ b/Combined_Robust_Pipeline.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "epochs = 1200\n",
-    "repeats = 5"
+    "repeats = 3"
    ]
   },
   {
@@ -60,9 +60,29 @@
     "for autoenc in autoencs:\n",
     "    autoenc.pipeline_fit(X_train_ae, epochs=epochs)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.losses import mae\n",
+    "from tensorflow.math import less\n",
+    "import numpy as np\n",
+    "def pipeline_predict(autoenc, test_data, contamination):\n",
+    "        reconstructions = autoenc.predict(test_data)\n",
+    "        test_loss = mae(test_data, reconstructions) # 1 = anomaly (same as data)\n",
+    "        contamination = contamination + 0.3 * (1 - contamination) #corrective factor to contamination to increase autoencoder recall\n",
+    "        threshold = np.percentile(test_loss, 100 - 100 * contamination)\n",
+    "        predictions = less(threshold, test_loss) # if threshold < loss, then we return a 1, as it's an anomaly, else return 0\n",
+    "        return test_loss.numpy(), predictions.numpy()\n",
+    "\n",
     "def timed_pipeline_predict(autoenc):\n",
     "    start_time = time()\n",
-    "    ae_scores, ae_predictions = autoenc.pipeline_predict(X_test, contamination)\n",
+    "    ae_scores, ae_predictions = pipeline_predict(autoenc, X_test, contamination=contamination)\n",
     "    ae_time = time() - start_time\n",
     "    return ae_scores, ae_predictions, ae_time\n",
     "\n",
@@ -78,7 +98,7 @@
     "    X_test_forest.iloc[:,pre_Z_cols:] = minmax_preprocess_z_features(X_test_forest.iloc[:,pre_Z_cols:])\n",
     "    return X_train_forest, X_test_forest\n",
     "\n",
-    "X_data_forests = [addZAndScale(i) for i in range(repeats)]\n"
+    "X_data_forests = [addZAndScale(i) for i in range(repeats)]"
    ]
   },
   {
